--- a/prometheus-spring-boot-starter/pom.xml
+++ b/prometheus-spring-boot-starter/pom.xml
@@ -15,8 +15,41 @@
     <properties>
         <java.version>1.8</java.version>
     </properties>
-    <dependencies>
 
+    <!--开源协议-->
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+            <comments>A business-friendly OSS license</comments>
+        </license>
+    </licenses>
+
+    <!--项目地址-->
+    <url>https://gitee.com/luckywxn/prometheus-starter</url>
+
+    <!--开发者信息-->
+    <developers>
+        <developer>
+            <id>prometheus-spring-boot-starter</id>
+            <name>prometheus-spring-boot-starter</name>
+            <email>1287325403@qq.com</email>
+            <roles>
+                <role>Developer</role>
+            </roles>
+            <timezone>+8</timezone>
+        </developer>
+    </developers>
+
+    <!--项目在github或其它托管平台的地址-->
+    <scm>
+        <connection>https://gitee.com/luckywxn/prometheus-starter.git</connection>
+        <developerConnection>scm:git:ssh://git@gitee.com:luckywxn/prometheus-starter.git</developerConnection>
+        <url>https://gitee.com/luckywxn/prometheus-starter/tree/master/prometheus-spring-boot-starter</url>
+    </scm>
+
+    <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
@@ -83,4 +116,15 @@
         </dependency>
     </dependencies>
 
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 </project>
